# ml-learning

./: .gitignore
Siddhardhan/ml_projects/: deploy_ml_via_streamlit.ipynb  p10_credit_card_fraud_detection_lr.ipynb  p11_medical_insurace_cost.ipynb  p12_big_mart_sales_prediction.ipynb  p13_customer_segmentation_km.ipynb  p14_parkinsons_.ipynb  p15_titanic_survival_lr.ipynb  p16_calories_burnt_prediction.ipynb  p17_spam_email_.ipynb  p18_movie_recommendation_sys.ipynb  p19_breast_cancer_.ipynb  p1_sonar_mine_rock_lc.ipynb  p2_diabetes_svc.ipynb  p3_house_prediction_xg.ipynb  p4_fake_news_lc.ipynb  (+6 more)
deep-learning/mediapipe/: body_language_decoder_tutorial.ipynb  mediapipe_ai_hand_pose.ipynb  mediapipe_ai_hand_pose_advance.ipynb  mediapipe_bicepes_curl_pose.ipynb  mediapipe_holistic_tutorial.ipynb  pyproject.toml
deep-learning/mediapipe/models/: body_language.pkl
deep-learning/ultralytics/: object-detection.ipynb  pyproject.toml
deep-learning/ultralytics/scripts/: object-detection.py  object-segmentation.py  object-tracking.py  pose-estimation.py  yolov8_segmentation.py
krish_naik/: 10-seaborn-2.ipynb  4- numpy-basic.ipynb  5-Pandas-df-ds-p1.ipynb  6-Pandas-P2.ipynb  7-pandas-json-html.ipynb  8-matplotlib.ipynb  9-seaborn-tutorial-1.ipynb  pyproject.toml
krish_naik/dl/: DL_ANN_example.ipynb
krish_naik/ml/: 03-linear-regression.ipynb  04-decision-tree.ipynb  06-clustering.ipynb
krish_naik/statistics/: part3-stats-krish-naik.ipynb  part4-stats-detect-outliers.ipynb  part6-ztest.ipynb  standardization_normalization.ipynb
statistics/: temp.py
(+27 files in other folders)
