[tool.poetry]
name = "krish-naik"
version = "0.1.0"
description = ""
authors = ["amithapa <amithapa1994@gmail.com>"]
readme = "README.md"
packages = [{include = "krish_naik"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
pandas = "^2.1.0"
jupyter = "^1.0.0"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
