[tool.poetry]
name = "mediapipe-project"
version = "0.1.0"
description = ""
authors = ["amithapa <amithapa1994@gmail.com>"]
readme = "README.md"
packages = [{include = "mediapipe_project"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
jupyter = "^1.0.0"
mediapipe = "^0.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
