[tool.poetry]
name = "ultralytics-explore"
version = "0.1.0"
description = ""
authors = ["amithapa <amithapa1994@gmail.com>"]
readme = "README.md"
packages = [{include = "ultralytics_explore"}]

[tool.poetry.dependencies]
python = "^3.10"
ultralytics = "^8.0.176"
opencv-python = "^4.8.0.76"
jupyter = "^1.0.0"
lapx = "^0.5.4"
torch = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
